--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://jeffuz.github.io/Personal-Portfolio/",
   "private": false,
   "dependencies": {
+    "@formspree/react": "^2.4.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
