--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://jeffuz.github.io/Personal-Portfolio/",
+  "homepage": "https://jeffzhang.net",
   "private": false,
   "dependencies": {
     "@formspree/react": "^2.4.4",
