--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-pdf": "^7.4.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-type-animation": "^3.1.0",
     "react-vertical-timeline-component": "^3.6.0",
     "web-vitals": "^2.1.4"
